--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   The adventures of an aspiring software engineer. One in the world of
   technological advancement and predictability. I'm sure everything will
   be fine.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "templar-blog" # the subpath of your site, e.g. /blog
+url: "http://zeplar-exe.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  zeplar-exe
 
