--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Templar Config
+title: Templar Blog
 email: no-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   The adventures of an aspiring software engineer. One in the world of
